# Agent-network

./: .gitignore  README.md
backend/: conftest.py  pyproject.toml
backend/agents/: __init__.py  virtual_traffic.py
backend/anp/: __init__.py  control.py  messaging.py
backend/anp/adapters/: __init__.py
backend/anp/contracts/: __init__.py  clock.py  enums.py  envelope.py  payloads.py  topics.py
backend/anp/gateway/: __init__.py  app.py  command_log.py  commands.py  config.py  consumers.py  mapping.py  models.py  state.py  topology.py
backend/anp/registry/: __init__.py  constants.py  models.py  registry.py  service.py
backend/scripts/: _p8_glue_keeper.sh  _p8_tunnel_keeper.sh  gen_schemas.py  p8_demo.sh  replay_video_text.py  run_gateway.py  run_model.py  run_signalvision_adapter.py  run_signalvision_exec.py  run_system_agent.py  run_video_command.py  run_video_inference_glue.py  run_video_ingest.py  run_video_qa.py  run_virtual_agent.py  run_visionhub_bridge.py  smoke_commands.py  smoke_gateway.py  smoke_roundtrip.py  smoke_signalvision_adapter.py  smoke_signalvision_exec.py  smoke_video_command_loop.py  smoke_video_qa.py  smoke_video_task.py  smoke_world_status.py  stub_visionhub_agent.py  sync_visionhub_cameras.py  sync_visionhub_events.py
backend/tests/: test_contracts.py  test_gateway.py  test_passthrough.py  test_registry.py  test_signalvision_adapter.py  test_signalvision_exec.py  test_signalvision_world.py  test_sv_network.py  test_system_agent.py  test_video.py  test_video_tasks.py  test_virtual_exec.py  test_visionhub_bridge.py  test_world.py
(+105 files in other folders)
